# LearningSparsePreconditioner4GPU

./: .gitignore  .gitmodules  README.md  compress.sh  compress_data.sh  cond.py  infer.py  infer_neural_pcg_heat.py  pyproject.toml  tmp.sh  train.py  train_neural_if.py  train_neural_pcg_heat.py  train_nif.py  uv-setup.sh
config/: basic.yaml  basic_multidata.yaml  data.yaml  gnn.yaml  loss.yaml  trainer.yaml
data/: README.md
data/objs/: gen-remesh.sh
datagen/: elast_bend.py  elast_twist.py  heat.py  heat_objmesh.py  heat_tetmesh.py  heat_tetmesh_high_contrast.py  poisson.py  poisson3d_tetmesh.py  stretch_armadillo.py  synthetic.py
datagen/config/: basic.yaml  elast_bend.yaml  elast_twist.yaml  heat.yaml  heat_multimesh.yaml  heat_tetmesh.yaml  poisson.yaml  poisson3d_tetmesh.yaml  stretch_armadillo.yaml  synthetic.yaml
ext/: build_amgx.sh
misc/: compute_stats.py  infer_all_precision.sh  infer_all_precision_epsilon.sh  infer_all_precision_epsilon_override.sh  infer_all_precision_multidata.sh  plot_bars.py  plot_cond.py  plot_converge.py  plot_scalability.py  tab_to_latex.py  tab_to_latex_benchmark.py  tetra.py  visualize_msh.py
neural_cg/: __init__.py  data.py  datagen_helper.py  loss.py  neural_pcg.py  nif.py  scaled_workspace.py  workspace.py
neural_cg/nn/: basic_layers.py  gnns.py
neural_cg/utils/: datamodule.py  optim.py  validate.py  weight_init.py
preprocess/: heatmultisource.py  msh_to_npy.py  obj_to_npy.py
training/: elast_twist.sh  heat.sh  heat_tetmesh.sh  multdata.sh  poisson.sh  poisson_tetmesh.sh  stretch_armadillo.sh  synthetic.sh
